FIx: ajuste global de segurança